syntax = "proto3";
package networks.packages;
option java_package = "org.petos.pum.networks.dto.credentials";
option java_multiple_files = true;
message PublisherInfo {
  string name = 1;
  string email = 2;
  bytes token = 3;
}